syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1";
option java_multiple_files = true;
option java_package = "com.dnfm.mina.protobuf.generated";
option java_outer_classname = "AuthProto";

import "dnf/v1/auth_login.proto";

// ========== 请求消息 ==========

// 认证密钥刷新请求 (module=10009, cmd=0)
message AuthkeyRefreshRequest {
  string authkey = 1;
}

// ========== 响应消息 ==========

// 认证密钥刷新响应 (module=10009, cmd=1)
message AuthkeyRefreshResponse {
  int32 error = 1;
  string authkey = 2;
  repeated ChannelInfo channel = 3;
  string version = 4;
}
